Restructured to show galway tides

--- a/MMM-IrishTides.css
+++ b/MMM-IrishTides.css
@@ -5,40 +5,31 @@
  */
 
 
-.MMM-SimpleTides .header {
+
+.MMM-StaticTides .header {
   color: white;               /* Color the header text. Default is white. */
   text-align: left;           /* Align the header text. (left, center, right) */
 }
 
-.MMM-SimpleTides .dt {
-  color: white;               /* Color the date and time text. Default is white. */
-  text-align: left;           /* Align the date and time text. (left, center, right) */
-}
-
-.MMM-SimpleTides .type {
-  color: white                /* Color the High/Low tide. Default is white. */
-  text-align: left;           /* Align the High/Low tide. (left, center, right) */
-/*  display: none; */         /* Uncomment if you don't want the type */
-}
-
-.MMM-SimpleTides .img {
-  margin-bottom: -4px;        /* Centers icon between lines. */
-}
-
-.MMM-SimpleTides .height {
-  color: white;               /* Color the tidal variance text. Default is white. */
-  text-align: left;           /* Align the tidal variance. (left, center, right) */
-/*  display: none; */         /* Uncomment if you don't want the height */
-}
-
-.MMM-SimpleTides .station {
-  color: white;               /* Color the location name. Default is white. */
-  text-align: left;           /* Align the location name. (left, center, right) */
+.MMM-StaticTides .place {
+  color: #33FFF5;               /* Color the location name. Default is white. */
 /*  display: none; */         /* Uncomment if you don't want the station */
 }
 
-.MMM-SimpleTides .latLon {
-  color: white;               /* Color the latLon of tide station. Default is white. */
-  text-align: left;           /* Align the latLon of tide station. (left, center, right) */
-/*  display: none; */         /* Uncomment if you don't want the latLon */
+.MMM-IrishTides td {
+  color: white;               /* Color the date and time text. Default is white. */
+  font-size: 12px;
+  line-height: 1.2em;
+}
+
+.MMM-StaticTides .date2 {
+  color: white;               /* Color the High/Low tide. Default is white. */
+}
+
+.MMM-StaticTides .img {
+  margin-bottom: -2px;        /* Centers icon between lines. */
+}
+
+.MMM-StaticTides .body{
+  line-height: 1.2em;
 }
